 - apt backend: Only add -dbg in --no-pkg mode, as there will be conflicts in
   normal package mode.
 - apt backend: Call tar with target cwd instead of using -C; the latter causes
   an extra openat() call which breaks with current fakechroot.

Improvements:
 - In apport-bug, if the user specifies a PID referring to a kernel thread,
   do the right thing and file the bug against the kernel

1.18 (2011-02-16)
-----------------
Bug fixes:
 - Ensure that symptom scripts define a run() function, and don't show them if
   not.
 - Do not show symptom scripts which start with an underscore. These can be
   used for private libraries for the actual symptom scripts.
 - Update bash completion. Thanks Philip Muškovac.
 - etc/default/apport: Remove obsolete "maxsize" setting. (LP: #719564)

Improvements:
 - Remove explicit handling of KDE *.ui files in setup.py, as
   python-distutils-extra 2.24 fixes this. Bump version check.
 - hookutils.py: Add attach_root_command_outputs() to run several commands
   at once. This avoids asking for the password several times. (LP: #716595)

1.17.2 (2011-02-04)
-------------------
Improvements:
 - Be more Python 3 compatible (not fully working with Python 3 yet, though).
 - apt/dpkg backend: Drop support for pre-0.7.9 python-apt API.
 - Add --tag option to add extra tags to reports. (LP: #572504)

Bug fixes:
 - hookutils.py, attach_dmesg(): Do not overwrite already existing dmesg.
 - hookutils.py: Be more robust against file permission errors. (LP: #444678)
 - ui.py: Do not show all the options in --help when invoked as *-bug.
   (LP: #665953)
 - launchpad.py: Adapt test cases to current standard_title() behaviour.

1.17.1 (2011-01-10)
-------------------
Bug fixes:
 - Make the GTK frontend work with GTK 2.0 as well, and drop "3.0" requirement.

1.17 (2010-12-31)
-----------------
Improvements:
 - Better standard bug titles for Python crashes. Thanks Matt Zimmerman!
   (LP: #681574)