@@ -18,6 +18,8 @@ Bug fixes:
 Improvements:
  - In apport-bug, if the user specifies a PID referring to a kernel thread,
    do the right thing and file the bug against the kernel
+ - In hookutils.attach_dmesg, skip over an initial truncated message if one
+   is present (this happens when the ring buffer overflows)
 
 1.18 (2011-02-16)
 -----------------
